Fixes spacing issues with content where it was not fitting in screen when at 576 pixels

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,15 @@
-/* Added for testing, need to remove*/
 * {
-    border: red solid;
+    box-sizing: border-box;
+    width: 100%;
+    /* border: red solid; */
+  }
+
+body {
+    margin: 0%;
+}
+
+main {
+    margin: 2% 0 2% 0;
 }
 
 header {
@@ -9,66 +18,73 @@ header {
     justify-content: space-between;    
 }
 
-nav {
-    display: flex;
+header h1 {
+    margin-left: 2%;
 }
 
 nav ul {
+    display: flex;
+    list-style: none;
+    text-align: center;
+}
+
+nav ul li {
+    margin: 1%;
+}
+
+nav ul li a {
+    color: white;
+}
+
+ul {
     list-style: none;
     display: flex;
     justify-content: space-between;
     padding: 0;
-    width: 30%;
 }
 
-nav ul li {
+ul li {
     margin: 5%;
-}
-
-a:link {
-    color: white;
 }
 
 .about-me {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 0%;
+}
+
+.about-me > * {
+    margin: 1%;
 }
 
 .about-me img {
-    width: 20%;
     height: auto;
 }
 
+.contact-links {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    border: solid red;
+}
+
+.contact-links ul li {
+    text-align: center;
+    margin: 1%;
+}
+
 @media screen and (max-width: 576px) {
-    
+
     header {
         flex-wrap: wrap;
     }
 
     header h1 {
         text-align: center;
-        width: 100%;
+        margin-top: 2%;
+        margin-bottom: 0;
     }
 
-    nav {
-        width: 100%;
-    }
 
-    nav ul {
-        width: 100%;
-    }
-
-    nav ul li {
-        flex-direction: column;
-        margin: 2%;
-    }
-
-    .about-me {
-        flex-wrap: wrap;
-        justify-content: center;
-        padding: 0%
-    }
-
-    .about-me > * {
-        margin: 1%;
-    }
 }
